@@ -4,6 +4,7 @@ Process Hacker
  * NEW/IMPROVED:
    * View digital signature information from process properties
    * Signatures for Windows 8 apps are now detected
+   * Added DPI Awareness column
    * Updated DotNetTools plugin:
      * Improved .NET assembly enumeration timeout handling
  * FIXED:
